Closed
Bug 1710013
Opened 4 years ago
Closed 4 years ago
Crash in [@ mozilla::layers::AxisPhysicsMSDModel::IsFinished]
Categories
(Core :: Panning and Zooming, defect)
Core
Panning and Zooming
Tracking
()
RESOLVED
FIXED
90 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox88 | --- | unaffected |
| firefox89 | --- | fixed |
| firefox90 | --- | fixed |
People
(Reporter: aryx, Assigned: hiro)
References
(Regression)
Details
(Keywords: crash, regression, Whiteboard: [proton-uplift])
Crash Data
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
|
Details | Review |
5 crashes on 3+ installations with 89 betas, all with macOS 11, both on x64 and AArch64
Crash report: https://crash-stats.mozilla.org/report/index/2f889a2a-1027-445b-9fdd-d70500210503
Reason: EXC_BAD_ACCESS / EXC_I386_GPFLT
Top 10 frames of crashing thread:
0 XUL mozilla::layers::AxisPhysicsMSDModel::IsFinished const gfx/layers/AxisPhysicsMSDModel.cpp:73
1 XUL mozilla::layers::AsyncPanZoomController::OnPan gfx/layers/apz/src/AsyncPanZoomController.cpp:2694
2 XUL mozilla::PanGestureInput::TransformToLocal widget/InputData.cpp:500
3 XUL mozilla::layers::AsyncPanZoomController::HandleInputEvent gfx/layers/apz/src/AsyncPanZoomController.cpp:1094
4 XUL mozilla::layers::InputQueue::ProcessQueue gfx/layers/apz/src/InputQueue.cpp:964
5 libmozglue.dylib moz_xmalloc memory/mozalloc/mozalloc.cpp:52
6 XUL nsTArrayInfallibleAllocator::ResultTypeProxy nsTArray_base<nsTArrayInfallibleAllocator, nsTArray_RelocateUsingMemutils>::EnsureCapacity<nsTArrayInfallibleAllocator> xpcom/ds/nsTArray-inl.h:162
7 XUL mozilla::layers::InputQueue::ReceivePanGestureInput gfx/layers/apz/src/InputQueue.cpp:478
8 XUL mozilla::layers::InputQueue::ReceiveInputEvent gfx/layers/apz/src/InputQueue.cpp:53
9 XUL mozilla::layers::APZCTreeManager::ReceiveInputEvent gfx/layers/apz/src/APZCTreeManager.cpp:1718
Flags: needinfo?(hikezoe.birchill)
| Assignee | ||
Comment 1•4 years ago
|
||
Looks like bug 1707519 is insufficient, we probably need to hold a strong reference of the OverscollAnimation instance in question.
Assignee: nobody → hikezoe.birchill
Status: NEW → ASSIGNED
Flags: needinfo?(hikezoe.birchill)
| Assignee | ||
Comment 2•4 years ago
|
||
Pushed by hikezoe.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/da6f855e06e0
Hold a strong reference of OverscrollAnimation instance to avoid being derefed. r=botond
| Assignee | ||
Comment 4•4 years ago
•
|
||
Comment on attachment 9220772 [details]
Bug 1710013 - Hold a strong reference of OverscrollAnimation instance to avoid being derefed. r?botond
Beta/Release Uplift Approval Request
- User impact if declined: [Required for MR1 / Proton] Crash
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The change is pretty small/simple, and made the code in question more robust, actually this is a case fallen from bug 1707519
- String changes made/needed: none
Attachment #9220772 -
Flags: approval-mozilla-beta?
| Assignee | ||
Updated•4 years ago
|
Whiteboard: [proton-uplift]
Comment 5•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
Comment 6•4 years ago
•
|
||
Comment on attachment 9220772 [details]
Bug 1710013 - Hold a strong reference of OverscrollAnimation instance to avoid being derefed. r?botond
Crash fix for a new 89 feature, approved for 89 beta 11, thanks.
Attachment #9220772 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•4 years ago
|
||
| bugherder uplift | ||
Updated•4 years ago
|
Has Regression Range: --- → yes
Updated•3 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•