Bug 1710013 - Hold a strong reference of OverscrollAnimation instance to avoid being derefed. r=botond a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D114580